--- a/WPFHomeWork1/WPFHomeWork1.csproj
+++ b/WPFHomeWork1/WPFHomeWork1.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="IMainVM.cs" />
     <Compile Include="VisibleConverter.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
